force-app/main/default/objects/custom_create24__c/custom_create24__c.object-meta.xml
<CustomObject>
    <label>Custom created object24</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects24</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>