force-app/main/default/objects/custom_create24__c/fields/custom_create_24field589__c.field-meta.xml
<CustomField>
    <fullName>custom_create_24field589__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 24field589</label>
    <type>Checkbox</type>
</CustomField>